# echarts-rs

./: Cargo.toml
src/: lib.rs  option.rs  theme.rs
src/assets/: echarts-5.5.1.min.js  template.hbs
src/option/: builder.rs  legend.rs  series.rs  title.rs  tooltip.rs  x_axis.rs  y_axis.rs
src/option/legend/: builder.rs  top_text.rs
src/option/series/: bar.rs  candlestick.rs  graph.rs  line.rs
src/option/series/bar/: data.rs
src/option/series/candlestick/: builder.rs  data.rs  item_style.rs
src/option/series/graph/: builder.rs  category.rs  edge.rs  emphasis.rs  graph_builder.rs  label.rs  layout.rs  line_style.rs  node.rs  symbol.rs
src/option/series/graph/emphasis/: focus.rs
src/option/series/graph/line_style/: type_.rs
src/option/series/line/: builder.rs  data.rs  end_label.rs
src/option/series/line/data/: number.rs
src/option/series/line/end_label/: builder.rs
src/option/title/: builder.rs  left_text.rs
src/option/tooltip/: axis_pointer.rs  builder.rs  trigger.rs
src/option/tooltip/axis_pointer/: builder.rs  type_.rs
src/option/x_axis/: builder.rs  data.rs  name_location.rs  type_.rs
src/option/y_axis/: axis_label.rs  axis_line.rs  builder.rs  position.rs  type_.rs
src/option/y_axis/axis_line/: builder.rs
src/template/: template.hbs
