[package]
name = "echarts-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = { version = "5.1.2", default-features = false }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117", default-features = false }